# stock_predictor

./: README.md
stock_data/: sample_AAPL_stock_data.csv
stock_price_predictor/: pyproject.toml
stock_price_predictor/stock_price_predictor/: data_processing.py
