[project]
name = "stock-price-predictor"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "xgboost",
    "yfinance",
    "matplotlib",
    "scikit-learn",
    "numpy>=2.1.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
